feat(Cotent): change some contents

--- a/pmbok.html
+++ b/pmbok.html
@@ -289,22 +289,26 @@
                                     </tr>
                                 </table>
                                 <ul class="unslider-content-list">
-                                    <li>Decomposition</li>
-                                    <li>Expert Judgment
-                                         <ul class="content-sub-list">
+                                    <li>Decomposition
+                                        <ul class="content-sub-list">
                                             <li class="unslider-content scroll">
-                                            Sample WBS decomposed down through Work Packages
-                                            <img src="img/img5.4.2.png"/>
+                                            Identifying and analyzing the deliverables and related work.
                                             </li>
                                             <li class="unslider-content scroll">
-                                            Sample WBS organized by Phase
-                                            <img src="img/img5.4.3.png"/>
+                                            Structuring and organizing the WBS;
                                             </li>
                                             <li class="unslider-content scroll">
-                                            Sample WBS with Major deliverables
-                                            <img src="img/img5.4.4.png"/>
+                                            Decomposing the upper WBS levels into lower-level detailed components;
+                                            </li>
+                                            <li class="unslider-content scroll">
+                                            Developing and assigning identification codes to the WBS components; and
+                                            </li>
+                                            <li class="unslider-content scroll">
+                                            Verifying that the degree of decomposition of the deliverables is appropriate.
                                             </li>
                                         </ul>
+                                    </li>
+                                    <li>Expert Judgment
                                     </li>
 
                                 </ul>
