--- a/pmbok.html
+++ b/pmbok.html
@@ -489,7 +489,7 @@
                             </div>
                         </div>
                         <div class="block">
-                            <div class="block-head head"><span id="show_pc_4">5.4 Create WBS</span>
+                            <div class="block-head head"><span id="show_pc_4">5.4 Create WBS<br><br></span>
                                 <span class="toggle">v</span>
                             </div>
                             <div class="block-content">
@@ -570,7 +570,7 @@
                             </div>
                         </div>
                         <div class="block">
-                            <div class="block-head head"><span id="show_pc_5">5.5 Validate Scope</span>
+                            <div class="block-head head"><span id="show_pc_5">5.5 Validate Scope<br><br></span>
                                 <span class="toggle">v</span>
                             </div>
                             <div class="block-content">
@@ -645,7 +645,7 @@
                             </div>
                         </div>
                         <div class="block">
-                            <div class="block-head head"><span id="show_pc_6">5.6 Control Scope</span>
+                            <div class="block-head head"><span id="show_pc_6">5.6 Control Scope<br><br></span>
                                 <span class="toggle">v</span>
                             </div>
                             <div class="block-content">
