feat(Content): add content for section 5.6

--- a/pmbok.html
+++ b/pmbok.html
@@ -394,13 +394,13 @@
                     </div>
                 </div>
                 <div class="popup-content" id="pc_6">
-                    <div class="pupup-content-head">5.3 Plan Scope Management</div>
+                    <div class="pupup-content-head">5.6 Control Scope</div>
                     <div class="my-slider">
                         <ul>
-                            <li class="unslider-content">
-                                <img src="img/img5.1.1.png"/>
+                            <li class="unslider-content scroll">
+                                <img src="img/img5.6.1.png"/>
                             </li>
-                            <li class="unslider-content">
+                            <li class="unslider-content scroll">
                                 <table class="io">
                                     <tr>
                                         <td class="in-out active">Inputs</td>
@@ -410,12 +410,13 @@
                                 </table>
                                 <ul class="unslider-content-list">
                                     <li>Project Management Plan</li>
-                                    <li>Project Charter</li>
-                                    <li>Enterprise Environmental Factors</li>
+                                    <li>Requirements Documentation</li>
+                                    <li>Requirements Traceability Matrix</li>
+                                    <li>Work Performance Data</li>
                                     <li>Organizational Process Assets</li>
                                 </ul>
                             </li>
-                            <li class="unslider-content">
+                            <li class="unslider-content scroll">
                                 <table class="io">
                                     <tr>
                                         <td class="in-out">Inputs</td>
@@ -424,11 +425,14 @@
                                     </tr>
                                 </table>
                                 <ul class="unslider-content-list">
-                                    <li>Expert Judgment</li>
-                                    <li>Meetings</li>
+                                    <li>Variance Analysis
+                                        <ul>
+                                            - Variance analysis is a technique for determining the cause and degree of difference between the baseline and actual performance. Project performance measurements are used to assess the magnitude of variation from the original scope baseline.
+                                        </ul>
+                                    </li>
                                 </ul>
                             </li>
-                            <li class="unslider-content">
+                            <li class="unslider-content scroll">
                                 <table class="io">
                                     <tr>
                                         <td class="in-out">Inputs</td>
@@ -437,8 +441,11 @@
                                     </tr>
                                 </table>
                                 <ul class="unslider-content-list">
-                                    <li>Scope Management Plan</li>
-                                    <li>Requirements Management Plan</li>
+                                    <li>Work Performance Information</li>
+                                    <li>Change Requests</li>
+                                    <li>Project Management Plan Updates</li>
+                                    <li>Project Documents Updates</li>
+                                    <li>Organizational Process Assets Updates</li>
                                 </ul>
                             </li>
                         </ul>
