feat(Content): Include content

--- a/pmbok.html
+++ b/pmbok.html
@@ -120,7 +120,7 @@
                                     <li>Stakeholder Register</li>
                                 </ul>
                             </li>
-                            <li class="unslider-content">
+                            <li class="unslider-content scroll">
                                 <table class="io">
                                     <tr>
                                         <td class="in-out">Inputs</td>
@@ -132,8 +132,23 @@
                                     <li>Interviews</li>
                                     <li>Focus Groups</li>
                                     <li>Facilitated Workshops</li>
-                                    <li>Group Creativity Techniques</li>
-                                    <li>Group Decision-Making Techniques</li>
+                                    <li>Group Creativity Techniques
+                                        <ul class="content-sub-list">
+                                            <li>Brainstorming</li>
+                                            <li>Nomial group technique</li>
+                                            <li>Idea/mind mapping</li>
+                                            <li>Affinity diagram</li>
+                                            <li>Multicriteria decision analysis</li>
+                                        </ul>
+                                    </li>
+                                    <li>Group Decision-Making Techniques
+                                        <ul class="content-sub-list">
+                                            <li>Unanimity</li>
+                                            <li>Majority</li>
+                                            <li>Plurality</li>
+                                            <li>Dicttorchip</li>
+                                        </ul>
+                                    </li>
                                     <li>Questionnaires and Surveys</li>
                                     <li>Observations</li>
                                     <li>Prototypes</li>
@@ -162,15 +177,15 @@
                                         </ul>
                                     </li>
                                     <li>Requirements Traceability Matrix
-                                    <ul class="content-sub-list">
-                                        <li>Business needs, opportunities, goals, and objectives</li>
-                                        <li>Project objectives</li>
-                                        <li>Project scope/WBS deliverables</li>
-                                        <li>Product design</li>
-                                        <li>Product development</li>
-                                        <li>Test strategy and test scenarios</li>
-                                        <li>High-level requirements to more detailed requirements</li>
-                                    </ul>
+                                        <ul class="content-sub-list">
+                                            <li>Business needs, opportunities, goals, and objectives</li>
+                                            <li>Project objectives</li>
+                                            <li>Project scope/WBS deliverables</li>
+                                            <li>Product design</li>
+                                            <li>Product development</li>
+                                            <li>Test strategy and test scenarios</li>
+                                            <li>High-level requirements to more detailed requirements</li>
+                                        </ul>
                                     </li>
                                 </ul>
                             </li>
@@ -208,7 +223,13 @@
                                     <li>Scope Management Plan</li>
                                     <li>Project Charter</li>
                                     <li>Requirements Documentation</li>
-                                    <li>Organizational Process Assets</li>
+                                    <li>Organizational Process Assets
+                                        <ul class="content-sub-list">
+                                            <li>Policies, procedures, and templates for a project scope statement</li>
+                                            <li>Project files from previous projects</li>
+                                            <li>Lessons learned from previous phases or projects</li>
+                                        </ul>
+                                    </li>
                                 </ul>
                             </li>
                             <li class="unslider-content">
@@ -220,7 +241,16 @@
                                     </tr>
                                 </table>
                                 <ul class="unslider-content-list">
-                                    <li>Expert Judgment</li>
+                                    <li>Expert Judgment
+                                        <ul class="content-sub-list">
+                                            <li>Other units within the organization</li>
+                                            <li>Consultants</li>
+                                            <li>Stakeholders, includung customers or sponsors</li>
+                                            <li>Professional and technical associations</li>
+                                            <li>Industry groups</li>
+                                            <li>Subject matter experts</li>
+                                        </ul>
+                                    </li>
                                     <li>Product Analysis</li>
                                     <li>Alternatives Generation</li>
                                     <li>Facilitated Workshops</li>
