fix(Bugs): minnor bug fixed

--- a/pmbok.html
+++ b/pmbok.html
@@ -307,7 +307,7 @@
                                     <li>Project Scope Statement</li>
                                     <li>Requirements documentation</li>
                                     <li>Enterprise Environmental Factors</li>
-                                    <li>organizational Process Assets</li>
+                                    <li>Organizational Process Assets</li>
                                 </ul>
                             </li>
                             <li class="unslider-content scroll">
